--- a/config/database.yml
+++ b/config/database.yml
@@ -9,9 +9,9 @@ default: &default
   pool: 5
   timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.sqlite3
+#development:
+#  <<: *default
+#  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -21,5 +21,21 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  #<<: *default
+  #database: db/production.sqlite3
+  adapter: mysql2
+  database: hack4p
+  username: root
+  password: 
+  #host: localhost
+  host: 0.0.0.0
+
+development:
+  #<<: *default
+  #database: db/production.sqlite3
+  adapter: mysql2
+  database: hack4p
+  username: root
+  password: 
+  #host: localhost
+  host: 0.0.0.0
